--- a/example/load_simulation.ipynb
+++ b/example/load_simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = r\"E:\\OneDrive - Nexus365\\Desktop\\physics\\Year 4\\project\\BenchFRET\\data\\simulated_traces\\pickledict\\trace_dataset_2024_01_29.pkl\""
+    "data_path = r\"E:\\OneDrive - Nexus365\\Desktop\\physics\\Year 4\\project\\BenchFRET\\data\\simulated_traces\\pickledict\\only_1.pkl\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,15 +30,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shape:(58,500,2)\n",
-      "got 58 traces containing 2 features: DD, DA\n"
+      "trace are of shape:(1, 1000, 9)\n",
+      "got 1 traces containing 9 features: DD, DA, AA, E, E_true, label, noise_level, min_E_diff, trans_mean\n",
+      "extracted only DD, DA as output 1, the full data as output 2\n",
+      "\n"
      ]
     }
    ],
@@ -48,15 +50,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shape:(58,500,1)\n",
-      "got labels for 58 traces\n"
+      "labels are of shape:(1, 1000)\n",
+      "got labels for 1 traces\n",
+      "\n"
      ]
     }
    ],
@@ -66,19 +69,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "got parameters dictionary containing the following keys:['n_traces', 'n_frames', 'n_colors', 'n_states', 'trans_mat', 'noise', 'gamma_noise_prob', 'reduce_memory', 'mode', 'parallel_asynchronous', 'min_state_diff']\n"
+      "got parameters dictionary containing the following keys:['n_traces', 'n_frames', 'n_colors', 'n_states', 'trans_mat', 'noise', 'gamma_noise_prob', 'reduce_memory', 'mode', 'parallel_asynchronous', 'min_state_diff']\n",
+      "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'n_traces': 1,\n",
+       " 'n_frames': 1000,\n",
+       " 'n_colors': 2,\n",
+       " 'n_states': 2,\n",
+       " 'trans_mat': array([[0.9, 0.1],\n",
+       "        [0.1, 0.9]]),\n",
+       " 'noise': (0.01, 1.2),\n",
+       " 'gamma_noise_prob': 0.8,\n",
+       " 'reduce_memory': False,\n",
+       " 'mode': 'state_mode',\n",
+       " 'parallel_asynchronous': False,\n",
+       " 'min_state_diff': 0.1}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "param_dict = simloader.get_parameters()"
+    "simloader.get_parameters()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1000,)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels.reshape(-1).shape"
    ]
   },
   {
