various updates to the pipeline and simulation code

--- a/example/new_simulation.ipynb
+++ b/example/new_simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,15 +22,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.69818816 0.30181184]\n",
-      " [0.38472059 0.61527941]]\n"
+      "[[0.86625705 0.13374295]\n",
+      " [0.88812794 0.11187206]]\n"
      ]
     }
    ],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,14 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -83,29 +76,87 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 144.45it/s]\n"
+      "100%|██████████| 100/100 [00:00<00:00, 101.67it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Spent 0.7 s to generate 69 traces\n",
+      "Spent 1.0 s to generate 69 traces\n",
       "Labels:  [0. 1. 2.]\n",
-      "exporting pickled dictionary to: E:\\OneDrive - Nexus365\\Desktop\\physics\\Year 4\\project\\BenchFRET\\data\\simulated_traces\\pickledict\\trace_dataset_2024_02_07.pkl\n"
+      "exporting pickled dictionary to: E:\\OneDrive - Nexus365\\Desktop\\physics\\Year 4\\project\\BenchFRET\\data\\simulated_traces\\pickledict\\test_2024_02_14.pkl\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "new_sim = NewSim(n_frames=1000,n_traces=100,outdir=outdir,n_states=3,trans_mat=fixed_matrix,export_mode=\"pickledict\", reduce_memory=False)"
+    "new_sim = NewSim(n_frames=1000,n_traces=100,outdir=outdir,n_states=3,trans_mat=fixed_matrix,export_mode=\"pickledict\", reduce_memory=False,export_name='test')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fetched data: DD, DA, AA, E, E_true, label, noise_level, min_E_diff, trans_mean\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[[-0.12350663,  1.15881385,  1.14882426, ..., -1.        ,\n",
+       "          0.31948   ,  0.1       ],\n",
+       "        [ 0.32469823,  0.6089545 ,  1.22706108, ..., -1.        ,\n",
+       "          0.31948   ,  0.1       ]],\n",
+       "\n",
+       "       [[ 0.50131873,  0.48219748,  0.37122553, ..., -1.        ,\n",
+       "          0.21313   ,  0.1       ],\n",
+       "        [ 0.48044909,  0.33685366,  0.36606112, ..., -1.        ,\n",
+       "          0.21313   ,  0.1       ]],\n",
+       "\n",
+       "       [[ 0.26013525,  0.42638469,  0.24404176, ..., -1.        ,\n",
+       "          0.17082   ,  0.1       ],\n",
+       "        [ 0.71099383,  0.42804719,  0.66753223, ..., -1.        ,\n",
+       "          0.17082   ,  0.1       ]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[-0.05828428,  1.08762579,  1.87378399, ..., -1.        ,\n",
+       "          0.23019   ,  0.1       ],\n",
+       "        [-0.0788796 ,  0.80279276,  1.44418982, ..., -1.        ,\n",
+       "          0.23019   ,  0.1       ]],\n",
+       "\n",
+       "       [[ 0.21715775,  0.35695192,  0.48692286, ..., -1.        ,\n",
+       "          0.10117   ,  0.1       ],\n",
+       "        [ 0.79557834,  0.67184331,  0.28645269, ..., -1.        ,\n",
+       "          0.10117   ,  0.1       ]],\n",
+       "\n",
+       "       [[ 0.12670677,  0.81182464,  0.44531878, ..., -1.        ,\n",
+       "          0.17909   ,  0.1       ],\n",
+       "        [ 0.44765675,  0.57971767,  0.0754814 , ..., -1.        ,\n",
+       "          0.17909   ,  0.1       ]]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_sim.get_data()[:,:2]"
+   ]
   },
   {
    "cell_type": "code",
