confusion matrix, weight-averaged precision and recall

--- a/example/batch_generator.ipynb
+++ b/example/batch_generator.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outdir = r'F:\\BenchFRET_Simulated_Comparison_Data\\4 states'"
+    "outdir = r'F:\\BenchFRET_Simulated_Training_Data'"
    ]
   },
   {
