added retrain fucntion for DeepLASI

--- a/example/new_simulation.ipynb
+++ b/example/new_simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,24 +13,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "outdir = 'E:\\OneDrive - Nexus365\\Desktop\\physics\\Year 4\\project\\BenchFRET\\data'"
+    "outdir = r'F:\\retrain_dataset'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.86625705 0.13374295]\n",
-      " [0.88812794 0.11187206]]\n"
+      "[[0.52590474 0.47409526]\n",
+      " [0.50952908 0.49047092]]\n"
      ]
     }
    ],
@@ -53,16 +53,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fixed_matrix = np.array([[0.8, 0.1, 0.1],[0.1, 0.8, 0.1],[0.1, 0.1, 0.8]])"
+    "# fixed_matrix = np.array([[0.8, 0.1, 0.1],[0.1, 0.8, 0.1],[0.1, 0.1, 0.8]])\n",
+    "fixed_matrix = np.array([[0.9, 0.1],[0.1, 0.9]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -76,28 +77,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 101.67it/s]"
+      "100%|██████████| 10000/10000 [00:43<00:00, 229.88it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Spent 1.0 s to generate 69 traces\n",
-      "Labels:  [0. 1. 2.]\n",
-      "exporting pickled dictionary to: E:\\OneDrive - Nexus365\\Desktop\\physics\\Year 4\\project\\BenchFRET\\data\\simulated_traces\\pickledict\\test_2024_02_14.pkl\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Spent 45.8 s to generate 6882 traces\n",
+      "Labels:  [0. 1.]\n",
+      "exporting pickled dictionary to: F:\\retrain_dataset\\pickledict\\test.pkl\n"
      ]
     }
    ],
    "source": [
-    "new_sim = NewSim(n_frames=1000,n_traces=100,outdir=outdir,n_states=3,trans_mat=fixed_matrix,export_mode=\"pickledict\", reduce_memory=False,export_name='test')"
+    "new_sim = NewSim(n_frames=500,\n",
+    "                n_traces=10000,\n",
+    "                noise=(0.5,1.0),\n",
+    "                outdir=outdir,\n",
+    "                n_states=2,\n",
+    "                noise_tolerance = 0.5,\n",
+    "                trans_mat=fixed_matrix,\n",
+    "                export_mode=\"pickledict\",\n",
+    "                reduce_memory=False,\n",
+    "                export_name='test')"
    ]
   },
   {
